# claude-agent-api-server

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  ENV_VARS.md  LICENSE  QUICKSTART.md  README.md  build.sh  client.py  envoy.yaml  error.json  example.py  manage_logs.sh  pyproject.toml  requirements.txt  serve  server.py  start.sh  test_agentcore_shell.sh  test_env  test_invocations.py  test_pty_client.sh  test_pty_terminal.sh  test_resume.py  test_simple.py  test_terminal_api.sh
backend/: __init__.py  claude_system_prompt.md  example.py  main.py  server.py
claude/: CLAUDE_SYNC.md  PROJECTS.md  architecture.md  cognito-error-handling.md  cognito-quick-setup.md  cognito-signup-guide.md  email-domain-restriction.md  github-oauth-setup.md  grpc-terminal-guide.md  oauth-3lo-flow.md  quickstart.md  terminal-implementation-summary.md  terminal-improvement-plan.md  web-client-env-config.md  workspace-mode.md  workspace-sync.md
cli_client/: README.md  client.py  pty_client.py  shell_client.py
deploy/: 01_build_and_push.sh  02_deploy_agentcore.sh  03_deploy_amplify.sh  Dockerfile  README.md  amplify.yml  cleanup.sh  config.env.template  deploy-amplify.sh  deploy-manual.sh  deploy.sh  deploy_all.sh
docker/: .env.example  CLAUDE.md  Dockerfile  build.sh  deploy_agent.py
src/: client.py  server.py  server_old.py  test_invocations.py
temp/: stop_agentcore_session.py  test_github_oauth.py  test_github_oauth_README.md  test_session_id_logic.js
web_client/: .env.example  .gitignore  AUTH_QUICKSTART.md  QUICKSTART.md  README.md  app.js  index.html  (+7 more)
(+76 files in other folders)
