[project]
name = "claude-agent-api-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk",
    "fastapi>=0.119.1",
    "litellm>=1.78.7",
]

[tool.uv.sources]
claude-agent-sdk = { workspace = true }
