[project]
name = "claude-agent-api-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.58",
    "claude-agent-sdk",
    "fastapi>=0.120.0",
    "litellm>=1.78.7",
]

[tool.uv.sources]
claude-agent-sdk = { workspace = true }
