[project]
name = "claude-agent-api-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.58",
    "claude-agent-sdk>=0.1.5",
    "fastapi>=0.120.0",
    "httpx>=0.28.1",
    "langfuse>=2,<3",
    "litellm>=1.78.7",
    "pyjwt>=2.10.1",
]
